--- a/config/core.entity_view_display.paragraph.kingly_paragraph_testimonial.default.yml
+++ b/config/core.entity_view_display.paragraph.kingly_paragraph_testimonial.default.yml
@@ -9,6 +9,8 @@ dependencies:
     - field.field.paragraph.kingly_paragraph_testimonial.field_testimonial_quote
     - field.field.paragraph.kingly_paragraph_testimonial.field_testimonial_rating
     - paragraphs.paragraphs_type.kingly_paragraph_testimonial
+  module:
+    - text
 id: paragraph.kingly_paragraph_testimonial.default
 targetEntityType: paragraph
 bundle: kingly_paragraph_testimonial
@@ -23,10 +25,16 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
+  field_testimonial_quote:
+    type: text_default
+    label: hidden
+    settings: {  }
+    third_party_settings: {  }
+    weight: 1
+    region: content
 hidden:
   field_testimonial_date: true
   field_testimonial_job_title: true
   field_testimonial_name: true
-  field_testimonial_quote: true
   field_testimonial_rating: true
   search_api_excerpt: true
