--- a/config/paragraphs.paragraphs_type.kingly_paragraph_testimonial.yml
+++ b/config/paragraphs.paragraphs_type.kingly_paragraph_testimonial.yml
@@ -2,7 +2,7 @@ langcode: en
 status: true
 dependencies: {  }
 id: kingly_paragraph_testimonial
-label: 'Kingly Testimonial'
+label: 'Testimonial'
 icon_uuid: null
 icon_default: null
 description: 'A testimonial with an image, star rating, quote, author name, title, and date, rendered as a card.'
